--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,16 @@
       name="description"
       content="Smart Rent System - A platform for property rental management"
     />
+    <meta property="og:title" content="Smart Rent System" />
+    <meta property="og:description" content="Modern Property Rental Management Platform | Find your perfect home away from home. SmartRent provides a secure platform for property rental with verified hosts and quality listings" />
+    <meta property="og:image" content="https://smartrentsystem.netlify.app/smart_rent_system_overview.png" />
+    <meta property="og:url" content="https://smartrentsystem.netlify.app/" />
+
+    <!-- Twitter Card -->
+     <meta name="twitter:card" content="https://smartrentsystem.netlify.app/smart_rent_system_overview.png" />
+     <meta name="twitter:title" content="Smart Rent System" />
+     <meta name="twitter:description" content="Modern Property Rental Management Platform | Find your perfect home away from home. SmartRent provides a secure platform for property rental with verified hosts and quality listings" />
+     <meta name="twitter:image" content="https://smartrentsystem.netlify.app/smart_rent_system_overview.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!-- Font Awesome -->
     <link
